@@ -13,7 +13,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("ЛЕВАЯ ГРАНИЦА")
 srSP("")
 trTR("SOL")
 
@@ -27,7 +27,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("ВЕРХНЯЯ ГРАНИЦА")
 srSP("")
 trTR("ÜST")
 
@@ -41,7 +41,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("ПРАВАЯ ГРАНИЦА")
 srSP("")
 trTR("SAĞ")
 
@@ -55,7 +55,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("НИЖНЯЯ ГРАНИЦА")
 srSP("")
 trTR("ALT")
 
@@ -69,7 +69,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("ОТДЕЛЕНО")
 srSP("")
 trTR("BAĞIMSIZ")
 
@@ -83,7 +83,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("НИ ОДИН")
 srSP("")
 trTR("YOK")
 
@@ -97,7 +97,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("ОТОБРАЖЕНО")
 srSP("")
 trTR("GÖRÜNÜR")
 
@@ -111,7 +111,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("СКРЫТО")
 srSP("")
 trTR("GİZLİ")
 
@@ -125,7 +125,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("АВТОСКРЫТИЕ")
 srSP("")
 trTR("OTOMATİK GİZLİ")
 
@@ -139,7 +139,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("ЗАКРЫТО")
 srSP("")
 trTR("KAPALI")
 
@@ -153,7 +153,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("ВЛОЖЕНО")
 srSP("")
 trTR("SEKMELİ")
 
@@ -167,7 +167,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Настройки")
 srSP("")
 trTR("Ayarlar")
 
@@ -181,7 +181,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Заголовок окна")
 srSP("")
 trTR("Pencere Başlığı")
 
@@ -209,7 +209,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Статус")
 srSP("")
 trTR("Durum")
 
@@ -223,7 +223,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Позиция")
 srSP("")
 trTR("Konum")
 
@@ -237,7 +237,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Классический")
 srSP("")
 trTR("")
 
@@ -251,7 +251,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Расширенный")
 srSP("")
 trTR("")
 
@@ -282,7 +282,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Безымянный")
 srSP("")
 trTR("Adsız")
 
@@ -313,7 +313,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Автоскрытие")
 srSP("")
 trTR("Otomatik Gizle")
 
@@ -327,7 +327,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Позиция окна")
 srSP("")
 trTR("Pencere Konumu")
 
@@ -341,7 +341,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Окно со вкладками")
 srSP("")
 trTR("Yeni Sekme")
 
@@ -358,7 +358,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Разместить")
 srSP("")
 trTR("Yasla")
 
@@ -372,7 +372,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Отделить")
 srSP("")
 trTR("Kaydır")
 
@@ -386,7 +386,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Показать")
 srSP("")
 trTR("Göster")
 
@@ -400,7 +400,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Скрыть")
 srSP("")
 trTR("Gizle")
 
@@ -414,7 +414,7 @@ esES("")
 fiFI("Ylä")
 frFR("Haut")
 huHU("Felső szél")
-ruRU("Верх")
+ruRU("Сверху")
 srSP("Vrh")
 trTR("Üst")
 
@@ -428,7 +428,7 @@ esES("")
 fiFI("Vasen")
 frFR("Gauche")
 huHU("Bal")
-ruRU("Влево")
+ruRU("Слева")
 srSP("Levo")
 trTR("Sol")
 
@@ -442,7 +442,7 @@ esES("")
 fiFI("Oikea")
 frFR("Droite")
 huHU("Jobb")
-ruRU("Вправо")
+ruRU("Справа")
 srSP("Desno")
 trTR("Sağ")
 
@@ -456,7 +456,7 @@ esES("")
 fiFI("Ala")
 frFR("Base")
 huHU("Alsó szél")
-ruRU("Низ")
+ruRU("Снизу")
 srSP("Dno")
 trTR("Alt")
 
@@ -473,7 +473,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Выбрать оформление:")
 srSP("")
 trTR("Kaplama:")
 
@@ -487,7 +487,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Сброс элементов")
 srSP("")
 trTR("Sıfırla")
 
@@ -501,7 +501,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Нажмите для сброса положения элементов.")
 srSP("")
 trTR("Pencere düzenini sıfırlamak için tıklayın")
 
@@ -515,7 +515,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Показывать иконки")
 srSP("")
 trTR("Simgeleri Göster")
 
@@ -529,7 +529,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Показывать кнопки")
 srSP("")
 trTR("Düğmeleri Göster")
 
@@ -543,7 +543,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Опции вкладок")
 srSP("")
 trTR("Sekmeli Pencere Seçenekleri")
 
@@ -557,7 +557,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Разрешить вкладки")
 srSP("")
 trTR("İçiçe Sekmelere İzin Ver")
 
@@ -571,7 +571,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Автовыравнивание вкладок")
 srSP("")
 trTR("Sekmeleri Otomatik Düzenle")
 
@@ -585,7 +585,7 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Опции автоскрытия")
 srSP("")
 trTR("Otomatik Gizleme Seçenekleri")
 
@@ -601,7 +601,9 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Ниже расположено окно, доступное для перемещения.\n"
+     "Левый щелчок на элементе вызовет выпадающее "
+     "меню для выбранного элемента.")
 srSP("")
 trTR("Pencerelerin denetim menüsünü açmak için aşağıdaki listede\nyer "
      "alan pencerelere tıklayın")
@@ -619,6 +621,6 @@ esES("")
 fiFI("")
 frFR("")
 huHU("")
-ruRU("")
+ruRU("Новая вкладка")
 srSP("")
 trTR("Yeni Sekme")
